User-visible changes in version 0.7.5  (2006-0 -  ):
* a few bug fixes

User-visible changes in version 0.7.4  (2006-05-31):
* improved data and sum export
* GUI: optional grid in main plot (see axes configuration dialog) 
* defined function types can be undefined using "undefine Function" syntax
* with option=value[, option2=value2 ...] command ...
  sets value of options for this command only
* GUI: if cut-function-level is set, function limits are shown when cursor 
  is over peak top
* aggregate functions in data expressions: min, max, sum, avg, stddev, darea 
  eg. min(y if 20<x<25)
* "commands[n:m]" replaced with "info commands[n:m]"
* GUI: option "reverse" in auxiliary plot 
* GUI: background removing can be undone (like in version 0.4)
* gamma function for data transformations and variables.
* built-in area-based Pearson VII function.

User-visible changes in version 0.7.3  (2006-04-11):
* extended data transformations: numarea(%f, x1, x2, n) gives area integrated
  numerically (from x1 to x2, n steps), Y = y-%f(x) substracts function from
  data, findx(%f, x1, x2, y) finds x in (x1, x2) such that %f(x)=y,
  extremum(%f, x1, x2) finds x in (x1, x2) such that %f'(x)=0,
  transformations can be joined with ',' (previously '&' was used),
  randuniform(a, b), randnormal(mu, sigma) generate random numbers,
  y[x=21] gives y at x=21 using linear interpolation between two points
* user defined functions derived from other functions, eg:
   define Ga(area,center,hwhm) = Gaussian(area/fwhm/sqrt(pi*ln(2)),center,hwhm)
* optional logarithmic scaling of y axis
* bug fixes (Debian Bug #360795 and others) 

User-visible changes in version 0.7.2  (2006-03-08):
* area-based Voigt function (VoigtA)
* GUI, MS Windows only, Session > "Copy to Clipboard" copies plots to clipboard
* added fityk.desktop file for Linux desktop integration (Niklas Volbers)
* GUI: "directories" tab in settings dialog 

User-visible changes in version 0.7.1  (2006-02-23):