@@ -46,8 +46,6 @@
 
 * (GUI) added peak should be activeted
 
-* (GUI) spin-control for history of input field
-
 * (GUI) access to pop-up menus (plots, output window) from menubar
 
 ------------------ next release here 0.7.5
