@@ -1,4 +1,5 @@
 User-visible changes in version 0.7.5  (2006-0 -  ):
+* r-squared shown in "info fit" output (Emmanuel Lamprecht)
 * a few bug fixes
 
 User-visible changes in version 0.7.4  (2006-05-31):
